--- a/Lesson1(RB199. Домашнее задание — проект ishop)/index.html
+++ b/Lesson1(RB199. Домашнее задание — проект ishop)/index.html
@@ -7,6 +7,14 @@
     <title>iShop</title>
 </head>
 <body>
-    
+
+  <div id="container"></div> 
+      
+  <script src="https://unpkg.com/react@15/dist/react.js"></script> 
+  <script src="https://unpkg.com/react-dom@15/dist/react-dom.js"></script> 
+
+  <script src="./iShop.js"></script>
+  <link rel="stylesheet" href="./iShop.css">
+
 </body>
 </html>
