--- a/Lesson1(RB199. Домашнее задание — проект ishop)/index.html
+++ b/Lesson1(RB199. Домашнее задание — проект ishop)/index.html
@@ -16,5 +16,22 @@
   <script src="./iShop.js"></script>
   <link rel="stylesheet" href="./iShop.css">
 
+  <script>
+
+    let iShopName='Green';
+    let iShopArr=[ 
+      {id:0, name:'Пицца "ЦЫПЛЕНОК ТЕРИЯКИ"', price: 17.99, url:"https://www.green-market.by/files//catalogproducts/127-Picca_Cyplenok_teriyaki.jpg",count:111}, 
+      {id:1, name:'Пицца "ЦЕЗАРЬ"', price: 18.20, url:"https://www.green-market.by/files/catalogproducts/128-Picca_Cezar'.jpg",count:222}, 
+      {id:2, name:'Пицца "МОРСКАЯ"', price: 23.30, url:"https://www.green-market.by/files//catalogproducts/125-Picca_Morskaya.jpg",count:333} 
+    ];
+
+    ReactDOM.render(
+      React.createElement(iShop,{iShopNam:iShopNam,iShopArr:iShopArr}), 
+      document.getElementById('container') 
+    );
+
+
+  </script>
+
 </body>
 </html>
