--- a/Lesson1(RB199. Домашнее задание — проект ishop)/index.html
+++ b/Lesson1(RB199. Домашнее задание — проект ishop)/index.html
@@ -26,7 +26,7 @@
     ];
 
     ReactDOM.render(
-      React.createElement(iShop,{iShopNam:iShopNam,iShopArr:iShopArr}), 
+      React.createElement(iShop,{iShopName:iShopName,iShopArr:iShopArr}), 
       document.getElementById('container') 
     );
 
