--- a/Lesson2(RC299. Домашнее задание — развитие проекта ishop)/index.html
+++ b/Lesson2(RC299. Домашнее задание — развитие проекта ishop)/index.html
@@ -16,8 +16,8 @@
   <script src="./iShop.js"></script>
   <link rel="stylesheet" href="./iShop.css">
 
-  <script src="./iShop.js"></script>
-  <link rel="stylesheet" href="./iShop.css">
+  <script src="./Product.js"></script>
+  <link rel="stylesheet" href="./Product.css">
 
   <script>
 
