--- a/Lesson3(RE385. Домашнее задание — развитие проекта ishop)/index.html
+++ b/Lesson3(RE385. Домашнее задание — развитие проекта ishop)/index.html
@@ -4,22 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="build.css">
     <title>iShop</title>
 </head>
 <body>
 
   <div id="container"></div> 
       
-  <script src="https://unpkg.com/react@15/dist/react.js"></script> 
+  <!-- <script src="https://unpkg.com/react@15/dist/react.js"></script> 
   <script src="https://unpkg.com/react-dom@15/dist/react-dom.js"></script> 
 
   <script src="./iShop.js"></script>
   <link rel="stylesheet" href="./iShop.css">
 
   <script src="./Product.js"></script>
-  <link rel="stylesheet" href="./Product.css">
+  <link rel="stylesheet" href="./Product.css"> -->
 
-  <script>
+  <script src="build.js"></script>
+
+  <!-- <script>
 
     let iShopName='Green';
     let iShopArr=[ 
@@ -34,7 +37,7 @@
     );
 
 
-  </script>
+  </script> -->
 
 </body>
 </html>
