--- a/Lesson3(RE385. Домашнее задание — развитие проекта ishop)/index.html
+++ b/Lesson3(RE385. Домашнее задание — развитие проекта ishop)/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>iShop</title>
-    <link rel="stylesheet" type="text/css" href="bundl.css">
+    <link rel="stylesheet" type="text/css" href="bundle.css">
 </head>
 <body>
 
   <div id="container"></div> 
-  <script src="bundl.js"></script>
+  <script src="bundle.js"></script>
 
 </body>
 </html>
