--- a/Lesson4(RainbowFrame)/index.html
+++ b/Lesson4(RainbowFrame)/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>iShop</title>
-    <link rel="stylesheet" type="text/css" href="bundle.css">
+    <link rel="stylesheet" type="text/css" href="./build/bundle.css">
 </head>
 <body>
 
   <div id="container"></div> 
-  <script src="bundle.js"></script>
+  <script src="./build/bundle.js"></script>
 
 </body>
 </html>
