--- a/Lesson5(Mobile)/index.html
+++ b/Lesson5(Mobile)/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>iShop</title>
+    <title>Mobile</title>
     <link rel="stylesheet" type="text/css" href="bundle.css">
 </head>
 <body>
